[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/end_game.gd" id="1_endgame"]

[node name="EndGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_endgame")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.18, 1)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Game Over!"
horizontal_alignment = 1

[node name="WinnerLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Winner"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="HeaderRow" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="RankHeader" type="Label" parent="CenterContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rank"
horizontal_alignment = 1

[node name="NameHeader" type="Label" parent="CenterContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
horizontal_alignment = 1

[node name="ScoreHeader" type="Label" parent="CenterContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score"
horizontal_alignment = 1

[node name="StandingsList" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)
theme_override_constants/separation = 6

[node name="Spacer2" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="MenuButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "Return to Menu"
